# pre-commit-complex-migrations-hook

./: .pre-commit-hooks.yaml  README.md  pre-commit-hook.yaml  pyproject.toml  setup.cfg  setup.py
pre_commit_complex_migrations_hook/: check_complex_migrations.py
