[tool.poetry]
name = "pre-commit-complex-migrations-hook"
version = "0.1.0"
description = ""
authors = ["Danila Smirnov <danila.smirnov@devmonsters.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
setuptools = "^70.0.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"