[metadata]
name = pre_commit_complex_migrations_hook
version = 1.0.1
description = pre-commit hook for validating complexity of alembic migrations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bg-open-source/pre-commit-complex-migrations-hook
author = Danila Smirnov
author_email = danila.smirnov@devmonsters.io

[options]
packages = pre_commit_complex_migrations_hook
python_requires = >=3.12.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    complex-migrations-hook = pre_commit_complex_migrations_hook.check_complex_migrations:main
